backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  backend
  namespace: default
  labels:
    app:  backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  backend
        tier: backend
    spec:
      containers:
      - name:  backend
        image:  meindealz/backend:prod
        imagePullPolicy: Always
        command: [ "sleep", "infinity" ]
        command: ["/bin/sh"]
        args: ["-c", 'uvicorn --host localhost --port 8000 app.main:app']
#Discuss on the resources before deployment        
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 100m
            memory: 200Mi
        # livenessProbe:
        #   tcpSocket:
        #     port: 6432
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /_status/healthz
        #     port: 6432
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        ports:
        - containerPort:  8888
          name:  backend
        - containerPort: 80
          name: backend80
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: backend-service
#   annotations:
#     service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
#     service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-type: "cookies"
#     service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-name: "example"
#     service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-ttl: "60"
# spec:
#   selector:
#     app: backend
#     tier: backend
#   type: NodePort
#   externalTrafficPolicy: Local
#   ports:
#     - protocol: TCP
#       port: 8888
#       targetPort: 8888
#       nodePort: 30003

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
