db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  postgres
  namespace: default
  labels:
    app:  postgres
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  postgres
        tier: postgres
    spec:
      containers:
      - name:  postgres
        image:  postgres:13
#Discuss on the resources before deployment        
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        # livenessProbe:
        #   tcpSocket:
        #     port: 5432
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        # readinessProbe:
        #   tcpSocket:
        #     port: 5432
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        ports:
        - containerPort:  5432
          name:  postgres
        - containerPort:  6432
          name:  postgres2
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always

# apiVersion: v1
# kind: Service
# metadata:
#   name: db-service
# #  name: http-lb
#   annotations:
#     service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
#     service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-type: "cookies"
#     service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-name: "example"
#     service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-ttl: "60"
# spec:
#   selector:
#     app: postgres
#     tier: postgres
#   type: NodePort
#   externalTrafficPolicy: Local
#   ports:
#     - protocol: TCP
#       port: 6432
#       targetPort: 6432
#       nodePort: 30000

---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 6432
      targetPort: 6432

---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
